--- a/adrian-nickc/package.json
+++ b/adrian-nickc/package.json
@@ -10,7 +10,8 @@
   "author": "Code Fellows",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.13.3",
-    "body-parser": "^1.17.1"
+    "pg": "^7.3.0"
   }
 }
